--- a/catalog.html
+++ b/catalog.html
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/aabe1e7da7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -62,55 +63,111 @@
                 </div>
             </div>
         </div>
-        <div class="article">
+        <div class="nav_top">
             <div class="container">
-                <div class="content_article">
-                    <img class="figure" src="img/big_man.svg" alt="error">
-                    <div class="info">
-                        <div class="feature"></div>
-                        <p class="text_info">the brand</p>
-                        <p class="text_info_bottom">of luxurios <span class="text_color_feature">fashion</span></p>
+                <div class="top_content">
+                    <div class="top_content_left">
+                        <h2 class="text_top_content">new arrivals</h2>
+                    </div>
+                    <div class="top_content_right">
+                        <a href="index.html" class="link_content">HOME/</a>
+                        <a href="#" class="link_content">MEN/</a>
+                        <a href="#" class="link_content">NEW ARRIVALS</a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="main">
-        <div class="container">
-            <div class="catalog">
-                <div class="catalog_top">
-                    <a class="box" href="#"><img src="img/for_women.jpg" alt="for_women">
-                        <div class="box_content">
-                            <p class="text_cat">30% off</p>
-                            <p class="text_catalog_color">for women</p>
-                        </div>
-                    </a>
-                    <a class="box" href="#"><img src="img/for_men.jpg" alt="for_men">
-                        <div class="box_content">
-                            <p class="text_cat">hot deal</p>
-                            <p class="text_catalog_color">for men</p>
-                        </div>
-                    </a>
-                    <a class="box" href="#"><img src="img/for_kids.jpg" alt="for_kids">
-                        <div class="box_content">
-                            <p class="text_cat">new arrivals</p>
-                            <p class="text_catalog_color">for kids</p>
-                        </div>
-                    </a>
+
+        <div class="main_catalog">
+            <div class="container">
+                <div class="cat_filters">
+                    <div class="filter">
+                        <details class="ac_filter">
+                            <summary class="filter_item">
+                                FILTER <i class="fa fa-solid fa-signal"></i>
+
+                            </summary>
+                            <div class="filter_nav">
+                                <details>
+                                    <summary class="filter_title">CATEGORY</summary>
+                                    <div class="filter_link">
+                                        <a class="text_menu" href="#">Accessories</a>
+                                        <a class="text_menu" href="#">Bags</a>
+                                        <a class="text_menu" href="#">Denim</a>
+                                        <a class="text_menu" href="#">Hoodies & Sweatshirts</a>
+                                        <a class="text_menu" href="#">Jackets & Coats</a>
+                                        <a class="text_menu" href="#">Polos</a>
+                                        <a class="text_menu" href="#">Shirts</a>
+                                        <a class="text_menu" href="#">Shoes</a>
+                                        <a class="text_menu" href="#">Sweaters & Knits</a>
+                                        <a class="text_menu" href="#">T-Shirts</a>
+                                        <a class="text_menu" href="#">Tanks</a>
+                                    </div>
+                                </details>
+                                <details>
+                                    <summary class="filter_title">BRAND</summary>
+                                    <div class="filter_link">
+                                        <a class="text_menu" href="#">Accessories</a>
+                                        <a class="text_menu" href="#">Bags</a>
+                                        <a class="text_menu" href="#">Denim</a>
+                                    </div>
+                                </details>
+                                <details>
+                                    <summary class="bord filter_title">DESIGNER</summary>
+                                    <div class="filter_link">
+                                        <a class="text_menu" href="#">Accessories</a>
+                                        <a class="text_menu" href="#">Bags</a>
+                                        <a class="text_menu" href="#">Denim</a>
+                                        <a class="text_menu" href="#">Accessories</a>
+                                        <a class="text_menu" href="#">Bags</a>
+                                        <a class="text_menu" href="#">Denim</a>
+                                    </div>
+                                </details>
+                        </details>
+                    </div>
+                    <div class="trending">
+                        <details class="trending_item">
+                            <summary class="title">TRENDING NOW <img class="V_pic" src="img/V.svg" alt="">
+                            </summary>
+                            <div class="trending_content">
+                                <p>Accessories</p>
+                                <p>Bags</p>
+                                <p>Denim</p>
+                        </details>
+                    </div>
+
+                    <div class="size">
+                        <details class="size_item">
+                            <summary class="title">SIZE <img class="V_pic" src="img/V.svg" alt="">
+                            </summary>
+                            <div class="size_content">
+                                <label class="size_label" for="size_label">
+                                    <input class="size_lb" id="size_label" type="checkbox">XS</label>
+                                <label class="size_label" for="size_label">
+                                    <input class="size_lb" id="size_label" type="checkbox">S</label>
+                                <label class="size_label" for="size_label">
+                                    <input class="size_lb" id="size_label" type="checkbox">M</label>
+                                <label class="size_label" for="size_label">
+                                    <input class="size_lb" id="size_label" type="checkbox">L</label>
+                            </div>
+                        </details>
+                    </div>
+
+                    <div class="price">
+                        <details class="price_item">
+                            <summary class="title">PRICE<img class="V_pic" src="img/V.svg" alt="">
+                            </summary>
+                            <div class="price_content">
+                                <p class="txt_price">All in</p>
+                                <p class="txt_price">low</p>
+                                <p class="txt_price"> Big</p>
+                            </div>
+                        </details>
+                    </div>
+
+
                 </div>
-                <div class="catalog_bottom">
-                    <a class="box" href="#"><img src="img/accesories.jpg" alt="for_kids">
-                        <div class="box_content_bottom">
-                            <p class="text_cat">new arrivals</p>
-                            <p class="text_catalog_color">for kids</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="main_middle">
-                <h1 class="headding">Fetured Items</h1>
-                <p class="text_catalog">Shop for items based on what we featured in this week</p>
-                <div class="card_box">
+                <div class="cards_catalog">
                     <div class="card">
                         <a class="card_pic" href="product.html"><img class="card_brightness" src="img/ELLERY(1).jpg"
                                 alt="error">
@@ -218,15 +275,88 @@
                             </a>
                         </div>
                     </div>
-                </div>
 
+                    <div class="card">
+                        <a class="card_pic" href="product.html"><img class="card_brightness" src="img/ELLERY(7).jpg"
+                                alt="error">
+                            <div class="text_card_box">
+                                <h4 class="headding_card">ellery x m'o capsule</h4>
+                                <p class="item_desk">Known for her sculptural takes on traditional tailoring, Australian
+                                    arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item_price">$52.00</p>
+                            </div>
+                        </a>
+                        <div class="link_box">
+                            <a class="card_link" href="#"><img src="img/basket_card.svg" alt="error">
+                                <p class="txt_card">Add to Cart</p>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <a class="card_pic" href="product.html"><img class="card_brightness" src="img/ELLERY(8).jpg"
+                                alt="error">
+                            <div class="text_card_box">
+                                <h4 class="headding_card">ellery x m'o capsule</h4>
+                                <p class="item_desk">Known for her sculptural takes on traditional tailoring, Australian
+                                    arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item_price">$52.00</p>
+                            </div>
+                        </a>
+                        <div class="link_box">
+                            <a class="card_link" href="#"><img src="img/basket_card.svg" alt="error">
+                                <p class="txt_card">Add to Cart</p>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <a class="card_pic" href="product.html"><img class="card_brightness" src="img/ELLERY(9).jpg"
+                                alt="error">
+                            <div class="text_card_box">
+                                <h4 class="headding_card">ellery x m'o capsule</h4>
+                                <p class="item_desk">Known for her sculptural takes on traditional tailoring, Australian
+                                    arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item_price">$52.00</p>
+                            </div>
+                        </a>
+                        <div class="link_box">
+                            <a class="card_link" href="#"><img src="img/basket_card.svg" alt="error">
+                                <p class="txt_card">Add to Cart</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="main_paginator">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-end">
+                            <li class="page-item disabled">
+                                <a class="page-link">Previous</a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">4</a></li>
+                            <li class="page-item"><a class="page-link" href="#">5</a></li>
+                            <li class="page-item"><a class="page-link" href="#">6</a></li>
+                            <li class="page-item"><a class="page-link" href="#">...</a></li>
+                            <li class="page-item"><a class="page-link" href="#">20</a></li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">Next</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <div class="main_bottom"><a class="main_bottom_link" href="catalog.html">
-                    <h1 class="headding_main_bottom"> browse all product</h1>
-                </a>
-            </div>
+
         </div>
     </div>
+
+    </div>
+
     <div class="footer">
         <div class="container">
             <div class=footer_top>
@@ -258,7 +388,8 @@
                 <div class="footer_section">
                     <div class="footer_section_left">
                         <img class="face" src="img/face.jpg" alt="face">
-                        <p class="text_section_left">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar
+                        <p class="text_section_left">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a
+                            pulvinar
                             purus condimentum“</p>
                     </div>
                     <div class="footer_section_right">
